tests/sema/negative/duplicate_enum_member.nv
enum Color {
    Red;
    Red;
}

fn main() : void {
    return;
}
